centered mainBox on both axis and set to a fixed width to prevent weird collapsing issues when on different browser sizes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,8 +13,8 @@ html {
 .container {
 	display: flex;
 	flex:1;
-	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 	flex: 1;
 }
 
@@ -29,6 +29,7 @@ html {
 	box-shadow: 0px 0px 15px #A2A4A8;
 	border-radius: 5px;
 	height:800px;
+	width: 1500px;
 }
 
 
